--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" href="./assets/img/logo/W3Schools_2020_2.svg" type="image/x-icon" />
   <link rel="stylesheet" href="./assets/css/style.css" />
+  <link rel="stylesheet" href="./assets/css/responsive.css" />
   <link rel="stylesheet" href="./assets/fonts/themify-icons/themify-icons.css" />
-  <title>Document</title>
+  <title>The Band</title>
 </head>
 
 <body>
@@ -15,19 +17,19 @@
     <div id="header">
       <!-- Begin: Nav -->
       <ul id="nav">
-        <li><a href="">Home</a></li>
-        <li><a href="">Band</a></li>
-        <li><a href="">Tour</a></li>
-        <li><a href="">Contact</a></li>
+        <li><a href="#">Home</a></li>
+        <li><a href="#band">Band</a></li>
+        <li><a href="#tour">Tour</a></li>
+        <li><a href="#contact">Contact</a></li>
         <li>
           <a href="">
             More
             <i class="nav-arrow-down ti-angle-down"></i>
           </a>
           <ul class="subnav">
-            <li><a href="">Merchandise</a></li>
-            <li><a href="">Extras</a></li>
-            <li><a href="">Media</a></li>
+            <li><a href="#">Merchandise</a></li>
+            <li><a href="#">Extras</a></li>
+            <li><a href="#">Media</a></li>
           </ul>
         </li>
       </ul>
@@ -35,6 +37,10 @@
       <!-- Begin: Search button -->
       <div class="search-btn">
         <i class="search-icon ti-search"></i>
+      </div>
+
+      <div class="mobile-menu-btn">
+        <i class="menu-icon ti-menu"></i>
       </div>
 
       <!-- End: Search button -->
@@ -50,7 +56,7 @@
 
     <div id="content">
       <!-- About section -->
-      <div class="content-section">
+      <div id="band" class="content-section">
         <h2 class="section-heading">THE BAND</h2>
         <p class="section-sub-heading">We love music</p>
         <p class="about-text">
@@ -82,7 +88,7 @@
         </div>
       </div>
       <!-- Tour section -->
-      <div class="tour-section">
+      <div id="tour" class="tour-section">
         <div class="content-section">
           <h2 class="section-heading text-white">TOUR DATES</h2>
           <p class="section-sub-heading text-white">
@@ -139,7 +145,7 @@
         </div>
       </div>
       <!-- Begin: Contact section -->
-      <div class="content-section">
+      <div id="contact" class="content-section">
         <h2 class="section-heading">CONTACT</h2>
         <p class="section-sub-heading">Fan? Drop a note!</p>
         <div class="row contact-content">
