--- a/index.html
+++ b/index.html
@@ -73,15 +73,15 @@
           ea commodo consequat.
         </p>
         <div class="row member-list">
-          <div class="col col-third text-center">
+          <div class="col col-third s-col-full mt-32  text-center">
             <p class="member-name">Name</p>
             <img src="./assets/img/band/mem1.jpg" alt="Name" class="member-img" />
           </div>
-          <div class="col col-third text-center">
+          <div class="col col-third s-col-full mt-32 text-center">
             <p class="member-name">Name</p>
             <img src="./assets/img/band/mem1.jpg" alt="Name" class="member-img" />
           </div>
-          <div class="col col-third text-center">
+          <div class="col col-third s-col-full mt-32 text-center">
             <p class="member-name">Name</p>
             <img src="./assets/img/band/mem1.jpg" alt="Name" class="member-img" />
           </div>
@@ -102,7 +102,7 @@
           </ul>
           <!-- Places -->
           <div class="row place-list">
-            <div class="col col-third">
+            <div class="col col-third s-col-full mt-16">
               <img src="./assets/img/places/newyork.jpg" alt="New York" class="place-img" />
               <div class="place-body">
                 <h3 class="place-heading">New York</h3>
@@ -110,10 +110,10 @@
                 <p class="place-desc">
                   Praesent tincidunt sed tellus ut rutrum sed vitae justo.
                 </p>
-                <button class="btn js-buy-ticket">Buy Tickets</button>
+                <button class="btn s-full-width js-buy-ticket">Buy Tickets</button>
               </div>
             </div>
-            <div class="col col-third">
+            <div class="col col-third s-col-full mt-16">
               <img src="./assets/img/places/paris.jpg" alt="Paris" class="place-img" />
               <div class="place-body">
                 <h3 class="place-heading">Paris</h3>
@@ -121,10 +121,10 @@
                 <p class="place-desc">
                   Praesent tincidunt sed tellus ut rutrum sed vitae justo.
                 </p>
-                <button class="btn js-buy-ticket">Buy Tickets</button>
+                <button class="btn s-full-width js-buy-ticket">Buy Tickets</button>
               </div>
             </div>
-            <div class="col col-third">
+            <div class="col col-third s-col-full mt-16">
               <img src="./assets/img/places/sanfran.jpg" alt="San Francisco" class="place-img" />
               <div class="place-body">
                 <h3 class="place-heading">San Francisco</h3>
@@ -132,7 +132,7 @@
                 <p class="place-desc">
                   Praesent tincidunt sed tellus ut rutrum sed vitae justo.
                 </p>
-                <button class="btn js-buy-ticket">Buy Tickets</button>
+                <button class="btn s-full-width js-buy-ticket">Buy Tickets</button>
               </div>
             </div>
           </div>
@@ -143,18 +143,18 @@
         <h2 class="section-heading">CONTACT</h2>
         <p class="section-sub-heading">Fan? Drop a note!</p>
         <div class="row contact-content">
-          <div class="col col-half contact-info">
+          <div class="col col-half s-col-full contact-info">
             <p><i class="ti-location-pin"></i>Chicago, US</p>
-            <p><i class="ti-mobile"></i>Phone: +00 151515</p>
-            <p><i class="ti-email"></i>Email: mail@mail.com</p>
+            <p><i class="ti-mobile"></i>Phone: <a href="tell: +00 151515"> +00 151515</a></p>
+            <p><i class="ti-email"></i>Email: <a href="mailto:mail@mail.com">mail@mail.com</a></p>
           </div>
-          <div class="col col-half contact-form">
+          <div class="col col-half s-col-full contact-form">
             <form action="">
               <div class="row">
-                <div class="col col-half">
+                <div class="col col-half s-col-full">
                   <input type="text" name="" placeholder="Name" required id="" class="form-control" />
                 </div>
-                <div class="col col-half">
+                <div class="col col-half s-col-full s-mt-8">
                   <input type="email" name="" placeholder="Email" required id="" class="form-control" />
                 </div>
               </div>
@@ -163,7 +163,7 @@
                   <input type="text" name="" placeholder="Message" required id="" class="form-control" />
                 </div>
               </div>
-              <input class="btn pull-right mt-16" type="submit" value="SEND" />
+              <input class="btn pull-right s-full-width mt-16" type="submit" value="SEND" />
             </form>
           </div>
         </div>
